--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ h2 {
   font-size: 24px;
 }
 
+p {
+  font-size: 12px;
+  color: #6F6F6F;
+
+}
+
 a {
   color: #fff;
 }
@@ -183,11 +189,6 @@ span {
   margin: 15px 0;
 }
 
-.card p {
-  color: #6F6F6F;
-  font-size: 12px;
-}
-
 .card p::after {
   content: "";
   display: block;
@@ -195,4 +196,107 @@ span {
   width: 220px;
   height: 2px;
   margin: 30px auto 40px auto;
+}
+
+/* Section 3 */
+
+.sect-3 {
+  padding: 70px 0;
+  text-align: center;
+}
+
+.sect-3 .container {
+  justify-content: space-between;
+}
+
+.sect-3 h1 {
+  color: #212121;
+  margin: 0 auto 70px auto;
+}
+
+.sect-3 p {
+  max-width: 240px;
+}
+
+.sect-3 h2 {
+margin: 15px 0;
+}
+
+/* Section 4 */
+
+.sect-4 {
+  padding: 70px 0;
+  background-color: #212121;  
+  text-align: center;
+}
+
+.sect-4 .container {
+  flex-direction: column;
+  align-items: center;
+}
+
+.sect-4 :nth-child(2) {
+  margin: 30px 0;
+}
+
+.sect-4 p {
+  color: #fff;
+  max-width: 490px;
+}
+
+.sect-4 .btn {
+  margin: 30px 0;
+}
+
+/* Section 5 */
+
+.sect-5 {
+  padding: 40px 0;
+}
+
+.sect-5 h1 {
+  color: #212121;
+  text-align: center;
+  margin: 30px;
+}
+
+.formbg {
+  background: url(../img/bg-preto.png);
+  background-repeat: no-repeat;
+  background-origin: border-box;
+}
+
+.sect-5 .container{
+  flex-direction: column;
+  align-items: center;
+}
+
+.sect-5 label{
+  font-family: Montserrat;
+  margin-bottom: 10px;
+}
+
+.sect-5 input, textarea {
+  width: 500px;
+  resize: vertical;
+  outline: none;
+  border: 2px #212121 solid;
+  border-radius: 10px;
+  font-family: Montserrat;
+  padding: 10px;
+}
+
+.sect-5 textarea {
+  height: 200px;
+}
+
+.footer {
+  background: #212121;
+  padding: 50px 0;
+  text-align: center;
+}
+
+.footer p {
+  font-size: 18px;
+  color: #fff;
 }
